ningún cambio de verdad

--- a/bookletVisor/css/bookletVisor.css
+++ b/bookletVisor/css/bookletVisor.css
@@ -7,5 +7,5 @@ body {
     position: absolute;
     border: none;
     outline: none;
-    background-image: url("/img/radiohead.jpg");
+    background-image: url("/img/01_000001_0001_001.jpg");
 }
