--- a/JScalculator/css/style.css
+++ b/JScalculator/css/style.css
@@ -1,30 +1,81 @@
 body {
+    height: 100%;
     background-color: #000000;
 }
 
 #calBody {
     position: absolute;
     background-color: aliceblue;
+    top: 50vh;
+    left: 50vw;
+    margin-top: -205px;
+    margin-left: -140px;
+    height: 410px;
+    width: 280px;
    }
 
 #calDisplay {
+    position: relative;
+    height: 20%;
+    width: 92%;
+    margin:auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
     background-color: gray;
+}
+
+#buttonContainer {
+    background-color: aqua;
+    position: relative;
+    margin:auto;
+    height:70%;
+    width: 92%;
 }
 
 .boxes {
     position: relative;
-    border-radius: 25px;
+    border-radius: 15px;
+}
+
+#secondSection{
+    position: relative;
+    width: 50%;
+    background-color: brown;
+}
+
+#thirdSection{
+    position: relative;
+    background-color: orchid;
+    width: 50%;
+  }
+
+.buttonRow {
+    position: relative;
+    width: 100%;
+    
 }
 
 button {
     background-color: #4CAF50;
-    border-radius: 25px;
+    border-radius: 10px;
     color: white;
-    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    width: 45px;
+    height: 45px;
+    margin: 0% 3% 3% 3%;
     font-size: 16px;
-    margin: 4px 2px;
     cursor: pointer;
+}
+
+.redButtons {
+    background-color: red;
+}
+
+#zero {
+    width: 110px;
+}
+
+#equal {
+    height: 110px;
 }
